--- a/drivers/input/touchscreen/Kconfig
+++ b/drivers/input/touchscreen/Kconfig
@@ -1337,4 +1337,6 @@ source "drivers/input/touchscreen/gt9916/Kconfig"
 
 source "drivers/input/touchscreen/synaptics_s3908p/Kconfig"
 
+source "drivers/input/touchscreen/xiaomi/Kconfig"
+
 endif
